# agent-search

./: .flake8  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
agent_search/: __init__.py  config.ini
agent_search/app/: server.py
agent_search/core/: __init__.py  client.py  search_types.py  utils.py
agent_search/docs/: README.md
agent_search/docs/source/: conf.py
agent_search/docs/source/api/: main.rst
agent_search/providers/: __init__.py  sciphi.py
agent_search/script/: populate_dbs.py  run_query.py
agent_search/scripts/: populate_qdrant_from_postgres.py  run_query.py  run_rag.py  run_search.py
agent_search/search/: __init__.py  base.py
data/: config.ini
docs/: custom.css  requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: main.rst
docs/source/python_client/: main.rst
docs/source/setup/: installation.rst  quick_start.rst
examples/: recursive_agent_search.py
local_search/script/: run_query.py
local_search/search/: base.py
local_web_search/: config.ini
local_web_search/app/: engine.py  server.py
local_web_search/core/: __init__.py  search_types.py  utils.py
local_web_search/script/: populate_dbs.py  run_query.py
local_web_search/search/: base.py
